changed toList call to use collect terminal operation